<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_availability_notification_title">Install/Update/Enable Google Play services</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_ulr_inactive_age_under_13">AgeUnder13</string>
    <string name="location_client_ulr_inactive_age_unknown">AgeUnknown</string>
    <string name="location_client_ulr_inactive_unknown_restriction">UnknownRestriction</string>
    <string name="server_host_name">seattleclouds.com</string>
    <string name="publisher_id">appowls</string>
    <string name="owner_un">howard</string>
    <string name="app_id">Bp6mobilephonedatarecovery</string>
    <string name="app_name">Mobile Phone Data Recovery</string>
    <string name="url_scheme">appowls.howard.bp6mobilephonedatarecovery</string>
    <string name="fb_api_key" />
    <string name="google_maps_api_key">0jbe4NyXN3WOAa8Mit_l5WwllH9gK_llPyfn_mg</string>
    <string name="google_maps_v2_api_key">AIzaSyDv34iCTHltLaJP70MvYckYMNBeb3zUJoA</string>
    <string name="app_licensing_public_key" />
    <string name="sc_api_key">Nw1K9MvavqrnGzOHznSovxy4KlEryCiCJ7Wqx9lIBS2htnICpk</string>
    <string name="barcode_button_dial">Dial number</string>
    <string name="barcode_button_email">Send email</string>
    <string name="barcode_button_show_map">Show map</string>
    <string name="barcode_button_add_contact">Add contact</string>
    <string name="barcode_button_add_calendar">Add to calendar</string>
    <string name="barcode_button_ok">OK</string>
    <string name="barcode_button_sms">Send SMS</string>
    <string name="barcode_button_mms">Send MMS</string>
    <string name="barcode_button_share_by_email">Share via email</string>
    <string name="barcode_button_share_by_sms">Share via SMS</string>
    <string name="barcode_button_open_browser">Open browser</string>
    <string name="barcode_button_search_book_contents">Search contents</string>
    <string name="barcode_result_address_book">Found contact info</string>
    <string name="barcode_result_calendar">Found calendar event</string>
    <string name="barcode_result_email_address">Found email address</string>
    <string name="barcode_result_geo">Found geographic coordinates</string>
    <string name="barcode_result_product">Found product</string>
    <string name="barcode_result_sms">Found SMS address</string>
    <string name="barcode_result_tel">Found phone number</string>
    <string name="barcode_result_text">Found plain text</string>
    <string name="barcode_result_uri">Found URL</string>
    <string name="barcode_msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="barcode_msg_default_mms_subject">Hi</string>
    <string name="barcode_msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="empty_content_description" />
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">"Can't add geofences, previous request hasn't finished."</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_title">%1$s geofence(s) %2$s</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="remove_geofences_id_failure">Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="remove_geofences_already_requested_error">"Can't remove geofences, previous request hasn't finished."</string>
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">Removing all geofences succeeded.</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="common_rotate_to_portrait_label">Please rotate to portrait orientation</string>
    <string name="calendar_event_edit_days_on">On</string>
    <string name="calendar_event_edit_days_on_hint">Days on</string>
    <string name="calendar_event_edit_days_off">Off</string>
    <string name="calendar_event_edit_days_off_hint">Days off</string>
    <string name="save_photo_address">Address</string>
    <string name="save_photo_address_hint">Shot-at address</string>
    <string name="save_photo_location">Location</string>
    <string name="save_photo_location_hint">Shot-at location</string>
    <string name="save_photo_album">Album</string>
    <string name="save_photo_album_spinner_prompt">Choose album</string>
    <string name="save_photo_left_text_prefix">Bottom-Left Text Prefix</string>
    <string name="save_photo_left_text_prefix_spinner_prompt">Choose prefix</string>
    <string name="save_photo_left_text">Bottom-Left Text</string>
    <string name="save_photo_left_text_hint">Optional text</string>
    <string name="save_photo_right_text">Bottom-Right Text</string>
    <string name="save_photo_right_text_hint">Optional text</string>
    <string name="save_photo_use_street_address">Use street address</string>
    <string name="photoeffect_button_send">Send</string>
    <string name="photoeffect_button_open">Open</string>
    <string name="photoeffect_button_apply">Apply</string>
    <string name="photoeffect_button_delete">Delete</string>
    <string name="photoeffect_button_choose">Choose…</string>
    <string name="photoeffect_progresbar_alfa">Alfa:</string>
    <string name="photoeffect_button_grey">Grey</string>
    <string name="photoeffect_button_color">Color</string>
    <string name="photoeffect_button_sepia">Sepia</string>
    <string name="photoeffect_button_effect">Effect</string>
    <string name="photoeffect_button_mask">Mask</string>
    <string name="quiz_result_finish">Finish</string>
    <string name="quiz_result_hint">Enter Your Name For New HighScore!</string>
    <string name="quiz_result_score">000</string>
    <string name="quiz_result_points_label_name">Total Points</string>
    <string name="quiz_result_header">Quiz Over</string>
    <string name="order_shipping">Shipping:</string>
    <string name="order_payment_method">Payment method</string>
    <string name="order_details_email">Detail emails:</string>
    <string name="order_details_phone_number">Phone number:</string>
    <string name="order_details_instructinos">Order instructions:</string>
    <string name="order_delivery_method">Delivery method:</string>
    <string name="order_delivery_address_place_holder">Delivery address(required)</string>
    <string name="order_tax">Tax:</string>
    <string name="order_subtotal">Subtotal:</string>
    <string name="order_total">Total:</string>
    <string name="order_zero">0</string>
    <string name="order_card_holder_name">Name:</string>
    <string name="order_card_holder_first_name">Surname:</string>
    <string name="order_card_number">Card number:</string>
    <string name="order_card_code">Card code:</string>
    <string name="order_card_exp_month">Expire month:</string>
    <string name="order_card_exp_year">Expire year:</string>
    <string name="order_submit_order_button_title">Submit order</string>
    <string name="product_order_default_email">abc@mail.com</string>
</resources>