<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linear_layout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip">
        <TextView android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/order_shipping" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
        <TextView android:gravity="center|right" android:id="@id/order_shipping_value" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/order_zero" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/order_subtotal" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
        <TextView android:gravity="center|right" android:id="@id/order_subtotal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/order_zero" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/order_tax" android:layout_weight="1.5" style="@android:style/TextAppearance.Medium" />
        <TextView android:gravity="center|right" android:id="@id/order_tax_value" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/order_zero" android:layout_weight="1.5" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textStyle="bold" android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/order_total" android:layout_weight="1.5" style="@android:style/TextAppearance.Medium" />
        <TextView android:textStyle="bold" android:gravity="center|right" android:id="@id/order_total_value" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/order_zero" android:layout_weight="1.5" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="0.71">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_details_phone_number" />
        <EditText android:id="@id/order_phone_number" android:tag="0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_details_phone_number" android:ems="10" android:inputType="phone">
            <requestFocus />
        </EditText>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_details_email" />
        <EditText android:id="@id/order_details_email" android:tag="0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/product_order_default_email" android:ems="10" android:inputType="textPersonName" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_details_instructinos" />
        <EditText android:id="@id/order_details_insturctions" android:tag="0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_details_instructinos" android:ems="10" android:singleLine="false" android:inputType="textPostalAddress" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="0.71">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_delivery_method" />
        <Spinner android:id="@id/order_delivery_method" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/order_delivery_address_block" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="0.71">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_shipping" />
        <EditText android:id="@id/order_delivery_address" android:tag="0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_delivery_address_place_holder" android:ems="10" android:singleLine="false" android:inputType="textPostalAddress" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="0.71">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_payment_method" />
        <Spinner android:id="@id/order_payment_method" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/order_credit_card_info" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="0.71">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/order_card_holder_first_name" />
        <EditText android:id="@id/order_card_holder_first_name" android:tag="0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_card_holder_first_name" android:ems="10" android:inputType="textPersonName" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/order_card_holder_name" />
        <EditText android:id="@id/order_card_holder_name" android:tag="1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_card_holder_name" android:ems="10" android:inputType="textPersonName" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/order_card_number" />
        <EditText android:id="@id/order_card_number" android:tag="2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_card_number" android:ems="10" android:inputType="numberDecimal" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/order_card_code" />
        <EditText android:id="@id/order_card_code" android:tag="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/order_card_code" android:ems="10" android:inputType="number" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
            <LinearLayout android:orientation="vertical" android:layout_width="168.0dip" android:layout_height="fill_parent" android:layout_weight="0.71">
                <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_card_exp_month" />
                <Spinner android:id="@id/order_card_exp_month" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="174.0dip" android:layout_height="fill_parent" android:layout_weight="0.71">
                <TextView android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/order_card_exp_year" />
                <Spinner android:id="@id/order_card_exp_year" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button android:layout_gravity="center" android:id="@id/order_submit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="90.0dip" android:text="@string/order_submit_order_button_title" />
</LinearLayout>