<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="30.0sp" android:textColor="#ff000000" android:gravity="center" android:background="#ff66cc33" android:layout_width="fill_parent" android:layout_height="108.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/quiz_result_header" />
    <TextView android:textSize="25.0sp" android:textColor="#ff66cc33" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/quiz_result_points_label_name" />
    <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/quiz_result_score_tw" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/quiz_result_score" />
    <EditText android:id="@id/quiz_result_score_amount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:inputType="textPersonName" />
    <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/quiz_result_hint" />
    <Button android:id="@id/quiz_result_finish_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="15.0dip" android:text="@string/quiz_result_finish" />
</LinearLayout>